--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.linkedin.com/jobs/search/*"],
+      "matches": ["https://www.linkedin.com/*"],
       "js": ["/content/message-listeners.js", "/content/linkedin-scraper.js"],
       "run_at": "document_idle"
     }
